Use 'concurrently' module for cross-platform compatibility of tasks

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Hello Group project boilerplate with Gulp, Scss, Browserify, and Babel",
   "main": "dist/app.js",
   "scripts": {
-    "dev": "gulp css:dev & gulp js:dev & gulp markup:dev & gulp images:dev & wait",
-    "dist": "gulp css:dist & gulp js:dist & gulp markup:dist & gulp images:dist & wait",
+    "dev": "concurrently \"gulp css:dev\" \"gulp js:dev\" \"gulp markup:dev\" \"gulp images:dev\"",
+    "dist": "concurrently \"gulp css:dist\" \"gulp js:dist\" \"gulp markup:dist\" \"gulp images:dist\"",
     "start": "npm run dev && gulp watch",
     "js": "gulp js:dev",
     "js-watch": "gulp js:dev && gulp watch:js",
@@ -24,6 +24,7 @@
     "babelify": "^7.3.0",
     "browser-sync": "^2.18.6",
     "browserify": "^13.3.0",
+    "concurrently": "^3.4.0",
     "cssnano": "^3.10.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
