Update eslint 'wrap-iife' option

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -276,7 +276,7 @@
         ],
         "valid-jsdoc": "error",
         "vars-on-top": "error",
-        "wrap-iife": "error",
+        "wrap-iife": ["error", "inside"],
         "wrap-regex": "error",
         "yield-star-spacing": "error",
         "yoda": [
